Fixed style-switcher and ligh-dark mode

--- a/css/skins/color-2.css
+++ b/css/skins/color-2.css
@@ -1,3 +1,3 @@
 :root{
-  --skin-color: #fa5b0f;
+  --skin-color: #dc0b0b;
 }
