--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,7 @@ ul{
   justify-content: center;
   align-items: center;
   z-index: 10;
-  background-color: white;
+  background-color: var(--bg-black-100);
 }
 .aside .logo{
   position: absolute;
@@ -317,7 +317,7 @@ h3.my-profession{
 .about .about-content .about-text h3 span{
   color: var(--skin-color);
 }
-.about .about-content .about-text h3 p{
+.about .about-content .about-text p{
   font-size: 16px;
   line-height: 25px;
   color: var(--text-black-700);
